2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Start the new development series.

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Back to dev.

=== release 0.6.0 ===

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	Releasing 0.6.0 "Can Punyetes"

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2009-08-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/converters/overlay/overlay.py:
	Makes overlay work for > 0.10.23 gst-plugins-base.
	Fixes #1340

2009-08-20  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/muxers/checks.py:
	* flumotion/component/muxers/ogg.py:
	Add warnings about the oggmuxer bug in gst-plugins base 0.10.24

2009-08-20  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	Have the disker overwrite the file if the file exists. Fixes #1339.

2009-08-14  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Xavier Queralt  <xqueralt@flumotion.com>

	* po/POTFILES.in:
	Update with new files containing strings for translation.
	Sort the entries.

2009-08-12  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* po/fr.po:
	last batch, there are still some flaky or non-translated strings though.

2009-08-12  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* po/fr.po:
	going on with the french translations...

2009-08-12  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	0.5.4.2 prerelase

2009-08-12  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Change the required version of Python to 2.4.0, which unbreaks the
	Python version detection logic in the autotools setup.

2009-08-12  Jan Urbanski  <jurbanski@flumotion.com>

	* data/make-dummy-cert: