@@ -1,3 +1,10 @@
+2009-08-25  Alvin Delagon  <adelagon@flumotion.com>
+
+	reviewed by: Zaheer Abbas Merali
+
+	* flumotion/twisted/integration.py:
+	Use tempfile.mkdtemp instead when making testDirs. Fixes #1347.
+
 2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>
 
 	* configure.ac:
